# am_ai_policy_ce

./: requirements.txt
pcec/: README.md  ReadMe.md  error_log_20250316-211517.txt  pyproject.toml
pcec/src/pcec/: crew.py  deepseek_wrapper.py  document_processor.py  extract-conditions.py  fix_report.py  main.py  parse_conditions.py  pdftest.py  run-sh.sh  task-helper.py  verify-report-sentences.py
pcec/src/pcec/config/: agents.yaml  tasks.yaml
pcec/src/pcec/output/: 1_conditions_chunk_0.md  1_conditions_chunk_1.md  1_conditions_chunk_2.md  1_extract_conditions_task_output.md  2_consolidated_conditions.md  2_identify_risks_task_output.md  6_final_compliance_report.md  design_controls_task_output.md  develop_tests_task_output.md  error_log_20250315-033718.txt  error_log_20250316-171019.txt  error_log_20250316-174709.txt  error_log_20250316-182127.txt  extract_conditions_task_output.md  final_compliance_report.md  identify_risks_task_output.md  structured_conditions.md
pcec/src/pcec/preprocessed/: chunk_index.txt  doc_0_CBUAE_EN_418_VER2_pages_1-5.txt  doc_0_CBUAE_EN_418_VER2_pages_11-15.txt  doc_0_CBUAE_EN_418_VER2_pages_16-20.txt  doc_0_CBUAE_EN_418_VER2_pages_21-25.txt  doc_0_CBUAE_EN_418_VER2_pages_26-30.txt  doc_0_CBUAE_EN_418_VER2_pages_31-35.txt  doc_0_CBUAE_EN_418_VER2_pages_36-40.txt  doc_0_CBUAE_EN_418_VER2_pages_41-43.txt  doc_0_CBUAE_EN_418_VER2_pages_44-46.txt  doc_0_CBUAE_EN_418_VER2_pages_6-10.txt  doc_0_PI_pages_1-2.txt  doc_0_PI_pages_1-5.txt  doc_0_PI_pages_101-102.txt  doc_0_PI_pages_101-105.txt  doc_0_PI_pages_103-105.txt  doc_0_PI_pages_11-12.txt  (+171 more)
(+52 files in other folders)
