[project]
name = "pcec"
version = "0.1.0"
description = "pcec using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
pcec = "pcec.main:run"
run_crew = "pcec.main:run"
train = "pcec.main:train"
replay = "pcec.main:replay"
test = "pcec.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
